ADD: user route to get loged in user, UPD: signUp and getOne Errors
