# docs/swagger.yaml
@@ -1630,7 +1630,39 @@ paths:
                     example: 200
                   msg:
                     $ref: '#/components/schemas/User'  
-
+  /user/me:
+    get:
+      tags:
+        - User
+      description: get the loged in User
+      security:
+        - BearerAuth: []
+      responses:
+        200:
+          description: A JSON Object with the loged in user
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: number
+                    example: 200
+                  msg:
+                    $ref: '#/components/schemas/User'
+        404:
+          description: User not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: number
+                    example: 404
+                  msg:
+                    type: string
+                    example: User not found
   /user/{id}:
     get:
       parameters:
@@ -1672,3 +1704,16 @@ paths:
                   msg:
                     type: string
                     example: User not found
+        400:
+          description: bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: number
+                    example: 400
+                  msg:
+                    type: string
+                    example: Incorrect user id
