# src/routes/user.ts
@@ -5,6 +5,7 @@ import * as Controllers from "@controllers";
 const router: Router = Router({ mergeParams: true });
 
 router.get("/", Controllers.User.getAllUsers);
+router.get("/me", Controllers.User.getLogedInUser);
 router.get("/:id", Controllers.User.getOneUserById);
 router.patch("/", Controllers.User.updateUserDetails);
 
